--- a/web/app/components/hero/horizontal_event_component.html.erb
+++ b/web/app/components/hero/horizontal_event_component.html.erb
@@ -1,11 +1,29 @@
 <%= content_tag :div, id: dom_id(@event, :hero), class: helpers.class_names('relative mr-1 mt-6 transition-opacity duration-300'), data: { controller: 'hero--horizontal-event', 'hero--horizontal-event-open-in-sidebar': @open_in_sidebar, 'flip-key': dom_id(@event, :hero) } do %>
-	<div data-hero--horizontal-event-target="shadowItem" class="overflow-hidden absolute top-0 right-0 top-1 -right-1 w-32 h-20 rounded-lg opacity-0 transition-all transform bg-gray-200 md:h-28 md:w-48">
-
-	</div>
 	<div data-hero--horizontal-event-target="currentItem"
-			 class="transition-opacity select-none ">
+			 class="transition-opacity select-none">
 		<div class="flex justify-between">
-			<div class="<%= helpers.class_names('pr-3 flex-1', {}) %>">
+			<div class="h-24 md:h-36 md:w-5/12 relative w-5/12">
+				<div style="background-color: <%= @event.image_dominant_color %>"
+						 class="<%= helpers.class_names('z-10 w-full h-full border-2 border-white overflow-hidden relative rounded-xl',
+																						{}) %>">
+					<%= link_to event_path(@event),
+											id:           dom_id(@event, 'hero--horizontal-event__image'),
+											'aria-label': "Ver evento #{@event&.name}",
+											data:         {
+												action:     'click->hero--horizontal-event#openEvent',
+												'event-id': @event.id
+											} do %>
+						<%= image_tag helpers.shrine_image_url(@event, :medium), {
+							class:   'cursor-pointer h-full object-center object-cover w-full overflow-hidden',
+							alt:     @event&.name,
+							onerror: "this.style.opacity='0'"
+						} rescue nil %>
+					<% end %>
+				</div>
+				<div data-hero--horizontal-event-target="shadowItem" class="-right-6 absolute bg-gray-400 h-full md:-right-10 overflow-hidden rounded-xl scale-75 top-0 transform transition-all w-full z-0">
+				</div>
+			</div>
+			<div class="<%= helpers.class_names('pl-5 md:pl-8 flex-1', {}) %>">
 				<%= content_tag :a,
 												dom_id(@event, 'hero--horizontal-event__link'),
 												href:  event_path(@event),
@@ -22,31 +40,14 @@
 					<span class="text-brand-600"><%= @event&.categories_display_name&.capitalize %> ·</span>
 					<%= link_to helpers.limit_place_name_size(@event.place_name, 24)&.titleize, place_path(@event.place), class: 'md:hover:underline capitalize' %>
 				</div>
-				<div class="font-light hidden md:inline-block mt-2 text-gray-700 text-sm">
-					<%= helpers.limit_description_size @event.description, 120 %>
+				<div class="hidden mt-2 text-sm font-light text-gray-700 md:inline-block">
+					<%= helpers.limit_description_size @event.description, 150 %>
 				</div>
 			</div>
-			<div style="background-color: <%= @event.image_dominant_color %>"
-					 class="<%= helpers.class_names('h-20 md:h-28 md:w-48 overflow-hidden rounded-lg border relative w-32',
-																					{}) %>">
-				<%= link_to event_path(@event),
-										id:           dom_id(@event, 'hero--horizontal-event__image'),
-										'aria-label': "Ver evento #{@event&.name}",
-										data:         {
-											action:     'click->hero--horizontal-event#openEvent',
-											'event-id': @event.id
-										} do %>
-					<%= image_tag helpers.shrine_image_url(@event, :feed), {
-						class:   'cursor-pointer h-full object-center object-cover w-full overflow-hidden',
-						alt:     @event&.name,
-						onerror: "this.style.opacity='0'"
-					} rescue nil %>
-				<% end %>
-			</div>
 		</div>
-		<div class="flex mt-3 space-x-3 flex-wrap">
+		<div class="flex flex-wrap md:float-right md:pl-8 md:w-7/12 mt-5 md:mt-2 space-x-3">
 			<%= content_tag :div, data: { action: 'click->hero--horizontal-event#like', 'event-id': @event.id }, class: 'c-chip' do %>
-				<svg class="stroke-current h-4" fill="none" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 24 24">
+				<svg class="h-4 stroke-current" fill="none" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 24 24">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 5a2 2 0 012-2h10a2 2 0 012 2v16l-7-3.5L5 21V5z"/>
 				</svg>
 				<span class="ml-1">
