--- a/web/app/components/hero/train_event_component.html.erb
+++ b/web/app/components/hero/train_event_component.html.erb
@@ -35,8 +35,8 @@
 				</div>
 			<% end %>
 		</div>
-		<div class="">
-			<div class="overflow-hidden relative md:mt-5 bg-gray-100">
+		<div class="h-24 md:h-36 md:w-5/12 relative w-5/12 relative">
+			<div class="bg-gray-100 border-2 border-white h-full relative rounded-xl w-full z-10">
 				<%= link_to event_path(@event),
 										'aria-label': "Ver evento #{@event&.name}",
 										data:         {
@@ -50,10 +50,12 @@
 							'event-id': @event.id
 						},
 						alt:     @event&.name,
-						class:   'rounded md:rounded-lg border cursor-pointer h-full w-24 h-18 md:w-48 md:h-28 object-center object-cover overflow-hidden',
+						class:   'rounded-xl cursor-pointer h-full w-full object-center object-cover overflow-hidden',
 						onerror: "this.style.opacity='0'"
 					} rescue nil %>
 				<% end %>
+			</div>
+			<div data-hero--horizontal-event-target="shadowItem" class="-right-6 absolute bg-gray-400 h-full md:-right-10 overflow-hidden rounded-xl scale-75 top-0 transform transition-all w-full z-0">
 			</div>
 		</div>
 	</div>
