Add dashboard with events by site daily

--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -205,7 +205,7 @@
 			</svg>
 		<% end %>
 
-		<div class="border-t m-5 relative md:hidden" style="min-height: 250px">
+		<div class="m-5 relative md:hidden" style="min-height: 250px">
 			<!-- ad events#show main -->
 			<%= render partial: 'adsense/square', locals: { id: 'events-show', src: square_adsense_index_path, loading: 'lazy' } %>
 		</div>
