--- a/web/app/views/movies/show.html.erb
+++ b/web/app/views/movies/show.html.erb
@@ -9,9 +9,9 @@
 
 <%= render(ModalComponent.new) %>
 
-<div class="flex mt-3 ml-5 space-x-3">
+<div class="flex mt-3 ml-5 space-x-3 md:hidden">
 	<%= link_to root_path, class: 'inline-block' do %>
-		<div class="flex space-x-2 text-xs c-chip md:hidden">
+		<div class="flex space-x-2 text-xs c-chip">
 			<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 stroke-current" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/>
 			</svg>
@@ -20,7 +20,7 @@
 	<% end %>
 
 	<%= link_to cinemas_path, class: 'inline-block' do %>
-		<div class="flex space-x-2 text-xs c-chip md:hidden">
+		<div class="flex space-x-2 text-xs c-chip">
 			<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 stroke-current" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"></path>
 			</svg>
@@ -43,7 +43,7 @@
 <% end %>
 
 <%# cache [@movie, @movie&.screenings&.max, DateTime.now.day] do %>
-<section class="mx-auto mt-5 max-w-screen-lg md:mt-12">
+<section class="mx-auto max-w-screen-lg md:mt-5">
 	<%= render partial: 'movies/movie', locals: { movie: @movie, cinemas: @cinemas } %>
 </section>
 <%# end %>
