--- a/web/app/views/components/_bottom-navigation.html.erb
+++ b/web/app/views/components/_bottom-navigation.html.erb
@@ -5,7 +5,7 @@
 			 data-controller="bottom-navigation"
 			 data-reflex-permanent>
 		<div class="flex md:flex-col md:space-y-5">
-			<a href="<%= root_path %>" class="<%= class_names 'py-2 cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100',
+			<a href="<%= root_path %>" data-turbo-preserve-scroll="true" class="<%= class_names 'py-2 cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100',
 																'text-brand-600': ['feeds', 'events'].include?(controller_name),
 																'text-gray-600':  !['feeds', 'events'].include?(controller_name) %>">
 				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -14,6 +14,7 @@
 				Início
 			</a>
 			<a href="<%= my_agenda_path %>"
+				 data-turbo-preserve-scroll="true"
 				 class="<%= class_names 'py-2 justify-between cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100',
 																'text-brand-600': current_page?('/minha-agenda'),
 																'text-gray-600':  !current_page?('/minha-agenda') %>">
