--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -76,7 +76,7 @@
 <% end %>
 
 
-<div class="sticky top-0 border-b md:sticky md:top-0 w-full mx-auto transition-transform duration-100 transform bg-white md:py-2 z-50 <%= class_names('sticky top-0': content_for?(:top_app_bar_title)) %>"
+<div class="sticky top-0 md:sticky md:top-0 w-full mx-auto transition-transform duration-100 transform bg-white md:py-2 z-50 <%= class_names('sticky top-0': content_for?(:top_app_bar_title)) %>"
 		 data-controller="head"
 		 data-reflex-permanent
 		 data-head-target="head">
