--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -14,7 +14,7 @@
 
 %>
 
-<header class="<%= class_names('md:px-0 px-5 justify-between h-14 md:h-16 max-w-screen-lg md:grid md:grid-cols-12 mx-auto my-auto select-none ',
+<header class="<%= class_names('md:px-0 px-5 justify-between h-14 md:h-16 max-w-screen-xl md:grid md:grid-cols-12 mx-auto my-auto select-none ',
 															 { 'flex h-14':      !current_page?('/busca'),
 																 'h-content py-2': current_page?('/busca') }) %>"
 				id="top-bar">
@@ -89,7 +89,7 @@
 				style="width: 100%">
 				<input autocomplete="false"
 							 name="q"
-							 class="bg-gray-100 focus:bg-white focus:border-transparent focus:outline-none focus:placeholder-brand-600 focus:ring focus:ring-brand-500 font-light h-11 mx-auto placeholder-gray-500 px-4 py-1 rounded-full text-xs w-full"
+							 class="bg-gray-100 focus:bg-white focus:border-transparent focus:outline-none focus:placeholder-brand-600 focus:ring focus:ring-brand-600 font-light h-11 mx-auto placeholder-gray-500 px-4 py-1 rounded-full text-xs w-full"
 							 id="text-field-shape-one"
 							 placeholder="Busque por rock, feira de rua, samba, standup..."
 							 type="text"
@@ -101,7 +101,7 @@
 			</form>
 		</div>
 	<% else %>
-		<div class="hidden md:col-span-3 md:inline-block"></div>
+		<div class="hidden md:col-span-6 md:inline-block"></div>
 	<% end %>
 	<div class="md:col-span-3 flex-shrink-0">
 		<div class="flex h-full items-center justify-end">
@@ -147,7 +147,7 @@
 												'gtm-action':   'click',
 												'gtm-category': 'Funil',
 												'gtm-label':    'Criar meu perfil'
-											}, class: 'hidden md:inline-block bg-brand-600 border border-transparent focus:outline-none focus:ring-2 focus:ring-brand-500 focus:ring-offset-2 font-medium hover:bg-brand-500 inline-flex items-center px-4 py-2 rounded-md shadow-sm text-sm text-white' %>
+											}, class: 'hidden md:inline-block bg-brand-600 border border-transparent focus:outline-none focus:ring-2 focus:ring-brand-600 focus:ring-offset-2 font-medium hover:bg-brand-500 inline-flex items-center px-4 py-2 rounded-md shadow-sm text-sm text-white' %>
 				<% end %>
 			<% end %>
 		</div>
